# stable-fluids-cuda

./: .gitignore  CMakeLists.txt  a.out  config.h  convergence.py  flame_graph.py  foo.py  gantt.py  generate_gif.py  gold.cu  gold.h  gold_advect.cu  gold_advect_tests.cc  gold_diffuse.cu  gold_diffuse.h  gold_diffuse_tests.cc  gold_project.cu  gold_project.h  gold_project_tests.cc  gold_tests.cc  graph.py  idx2.cu  idx2.h  idx2_tests.cc  macros.h  main.cu  performance.py  sfc.py  state.c  state.cu  state.h  test.py  tests.cc  timings.py  type_casting.cu  vec2.cu  vec2.h  vec2_tests.cc
include/: gold_advect.h
include/gold/: index.h  project.h  sink_colors.cuh  sink_velocities.cuh  solve.cuh  source_colors.cuh  source_velocities.cuh
include/kernel/: advect.cuh  diffuse.cuh  diffuse.h  index.cuh  project.cuh  sink_colors.cuh  sink_velocities.cuh  solve.cuh  source_colors.cuh  source_velocities.cuh
include/util/: compile_options.h  derivative.cuh  gif.cuh  idx2.cuh  log.cuh  macros.h  performance.cuh  state.h  type_casting.cuh  type_casting.h  vec2.cuh
report/: README.md
src/: CMakeLists.txt  gold.cu  gold_diffuse.cu  gold_diffuse_tests.cc  gold_project.cu  idx2.cu  idx2_tests.cc  main.cu  state.cu  type_casting.cu  vec2.cu  vec2_tests.cc
src/gold/: CMakeLists.txt  advect.cu  diffuse.cu  gold.cu  gold_advect.cu  gold_solve.cu  project.cu  sink_colors.cu  sink_velocities.cu  source_colors.cu  source_velocities.cu
src/kernel/: CMakeLists.txt  advect.cu  diffuse.cu  index.cu  project.cu  sink_colors.cu  sink_velocities.cu  solve.cu  source_colors.cu  source_velocities.cu
src/util/: CMakeLists.txt  derivative.cu  gif.cu  idx2.cu  log.cu  performance.cu  state.cu  type_casting.cu  vec2.cu
test/: CMakeLists.txt  main.cu
tests/: CMakeLists.txt
tests/gold/: gold_advect_tests.cc  gold_diffuse_tests.cc  gold_project_tests.cc  gold_solve_tests.cc
tests/kernel/: kernel_advect_test.cc  kernel_diffuse_test.cc  kernel_index_test.cc  kernel_project_test.cc  kernel_sink_colors_test.cc  kernel_sink_velocities_tests.cc  kernel_solve_tests.cc  kernel_source_colors_test.cc  kernel_source_velocities_test.cc
tests/performance/: performance_cpu_test.cc  performance_kernel_test.cc
tests/util/: idx2_tests.cc  vec2_tests.cc
