
add_subdirectory(gold)
add_subdirectory(util)
add_subdirectory(kernel)

add_executable(${PROJECT_NAME} main.cu)
target_link_libraries(${PROJECT_NAME} PRIVATE gold util)



# enable_testing()
# add_executable(${PROJECT_NAME}-gold-diffuse-tests gold_diffuse_tests.cc ${COMMON_SOURCE_FILES})
# add_executable(${PROJECT_NAME}-gold-advect-tests gold_advect_tests.cc ${COMMON_SOURCE_FILES})
# add_executable(${PROJECT_NAME}-gold-project-tests gold_project_tests.cc ${COMMON_SOURCE_FILES})
# add_executable(${PROJECT_NAME}-vec2-tests vec2_tests.cc ${COMMON_SOURCE_FILES})
# add_executable(${PROJECT_NAME}-idx2-tests util/idx2_tests.cc)
# if(OPENMP_FOUND)
#   target_link_libraries(${PROJECT_NAME}-gold-diffuse-tests OpenMP::OpenMP_CXX)
#   target_link_libraries(${PROJECT_NAME}-gold-advect-tests OpenMP::OpenMP_CXX)
#   target_link_libraries(${PROJECT_NAME}-gold-project-tests OpenMP::OpenMP_CXX)
#   target_link_libraries(${PROJECT_NAME}-vec2-tests OpenMP::OpenMP_CXX)
#   target_link_libraries(${PROJECT_NAME}-idx2-tests OpenMP::OpenMP_CXX)
# endif()
# target_link_libraries(${PROJECT_NAME}-gold-diffuse-tests GTest::gtest_main)
# target_link_libraries(${PROJECT_NAME}-gold-advect-tests GTest::gtest_main)
# target_link_libraries(${PROJECT_NAME}-gold-project-tests GTest::gtest_main)
# target_link_libraries(${PROJECT_NAME}-vec2-tests GTest::gtest_main)
# target_link_libraries(${PROJECT_NAME}-idx2-tests GTest::gtest_main)

# include(GoogleTest)
# gtest_discover_tests(${PROJECT_NAME}-gold-diffuse-tests)
# gtest_discover_tests(${PROJECT_NAME}-gold-advect-tests)
# gtest_discover_tests(${PROJECT_NAME}-gold-project-tests)
# gtest_discover_tests(${PROJECT_NAME}-vec2-tests)
# gtest_discover_tests(${PROJECT_NAME}-idx2-tests)